test/golden/{helloCOLON=100s}.golden

INITIALPATH:7:33: error:
    • String type is incompatible with inside padding (=).

    • In the quasi-quotation: [fmt|{hello:=100s}|]
  |
7 | main = putStrLn [fmt|{hello:=100s}|]
  |                                 ^
